# TBank-Hackathon

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  main.py
src/bot/: handlers.py  keyboards.py
src/brokers/: tinvest.py
src/db/: migrate.py  models.py
src/llm/: gemini_runner.py  openai_runner.py
src/news/: dedup.py  fetcher.py
src/portfolio/: analytics.py
src/scoring/: model.py  rules.py
tests/: test_openai_runner.py
